# Silksong-rosary-farmer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/silksong_rosary_farmer/: __init__.py  __main__.py  farm.py  image.py  main.py  monitor.py  ui.py  utils.py
