[project]
name = "silksong-rosary-farmer"
version = "0.1.0"
description = "I hate manual farmiiing"
readme = "README.md"
authors = [{ name = "egeres", email = "egeres.default@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "mss>=10.1.0",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "pynput>=1.5.0",
    "rich>=12.0.0",
    "typer>=0.19.2",
]

[project.scripts]
silksong-rosary-farmer = "silksong_rosary_farmer:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
